--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="cardFront">
             <div class="front-text">
               <h3 class="happy">FIESTA</h3>
-              <h4 class="bday">DE CUMPLEAÑOS</h4>
+              <h4 class="bday">FELIZ CUMPLEAÑOS</h4>
             </div>
             <div class="wrap-deco">
               <div class="decorations"></div>
@@ -27,16 +27,19 @@
               <div class="cake"></div>
               <div class="flame"></div>
             </div>
+            <div align="center">
+            <img src="logo.png" alt="" height="40p" width="40">
+            </div>
         </div>
         <div class="cardInside">
           <div class="inside-text">
             <h3 class="happy">FIESTA</h3>
-            <h4 class="bday">DE CUMPLEAÑOS</h4>
+            <h4 class="bday">FELIZ CUMPLEAÑOS</h4>
           </div>
           <div class="wishes">
             <p>Querido Amigo,</p>
             <p>Ven a celebrar mi fiesta de cumpleaños</p>
-            <p class="name">xxx</p>
+            <p class="name">Lucas Parras</p>
           </div>
         </div>
     </div>
