--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
           </div>
           <div class="wishes">
             <p>Querido Amigo,</p>
-            <p>Ven a celebrar mi fiesta de cumpleaños</p>
+            <p>Ven a celebrar mi fiesta de cumpleaños el <b>27 de agosto</b>.<br><small><b>PD</b>: ( recibo dinero en efectivo )</small></p>
             <p class="name">Lucas Parras</p>
+            <img src="lucas.jpg" alt="" width="80" height="80" style="border-radius: 50%; position: absolute; top: 135px; right: 60px">
           </div>
         </div>
     </div>
